--- a/FullCart/FullCart.API/FullCart.API.csproj
+++ b/FullCart/FullCart.API/FullCart.API.csproj
@@ -18,6 +18,7 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.2.0" />
   </ItemGroup>
 
@@ -26,6 +27,10 @@
     <ProjectReference Include="..\FullCart.Data\FullCart.Data.csproj" />
     <ProjectReference Include="..\FullCart.DTO\FullCart.DTO.csproj" />
     <ProjectReference Include="..\FullCart.Services\FullCart.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
