--- a/FullCart/FullCart.DTO/FullCart.DTO.csproj
+++ b/FullCart/FullCart.DTO/FullCart.DTO.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FullCart.Core\FullCart.Core.csproj" />
+    <ProjectReference Include="..\FullCart.Data\FullCart.Data.csproj" />
   </ItemGroup>
 
 </Project>
