initial create structure for front

--- a/FullCart/FullCart.Web/ClientApp/angular.json
+++ b/FullCart/FullCart.Web/ClientApp/angular.json
@@ -132,5 +132,8 @@
       }
     }
   },
-  "defaultProject": "FullCart.Web"
+  "defaultProject": "FullCart.Web",
+  "cli": {
+    "analytics": false
+  }
 }
