--- a/FullCart/FullCart.Web/ClientApp/angular.json
+++ b/FullCart/FullCart.Web/ClientApp/angular.json
@@ -31,6 +31,8 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/alertifyjs/build/css/alertify.min.css",
+              "node_modules/alertifyjs/build/css/themes/default.min.css",
               "src/styles.css"
             ],
             "scripts": []
