--- a/FullCart/FullCart.Web/ClientApp/tsconfig.json
+++ b/FullCart/FullCart.Web/ClientApp/tsconfig.json
@@ -13,6 +13,7 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
+    "noImplicitAny": false,
     "target": "es2022",
     "module": "es2020",
     "lib": [
